@@ -1,4 +1,4 @@
-.TH VIFM 1 "2 November 2024" "vifm 0.13"
+.TH VIFM 1 "5 November 2024" "vifm 0.13"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -2658,6 +2658,7 @@ Set mark x (a\-zA\-Z0\-9) at /full/path and filename.  By default current
 directory is being used.  If no filename was given and /full/path is current
 directory then last file in [range] is used.  Using of macros is allowed.
 Question mark will stop command from overwriting existing marks.
+Environment variables are expanded.
 .TP
 .BI "                                         :marks"
 .TP
